# Haskell4ScalaDevelopers

./: Haskell4ScalaDevelopers.cabal  LICENSE  README.md
src/DataStructures/: Answer01.hs  Answer02.hs  Answer03.hs  Answer04.hs  Answer05.hs  Answer06.hs  Answer07.hs  Answer08.hs  Answer09.hs
src/GettingStarted/: Curry.hs  GettingStarted.hs  IsSorted.hs  Main.hs  PolymorphicFunctions.hs
